--- a/src/Web/MVC/CWSB.WebApp.MVC/Views/_ViewImports.cshtml
+++ b/src/Web/MVC/CWSB.WebApp.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using CWSB.WebApp.MVC
 @using CWSB.WebApp.MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, CWSB.WebApp.MVC"
+
