Added Stock Bot. Added Controller to new Post Chat Service.

--- a/src/Web/MVC/CWSB.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/src/Web/MVC/CWSB.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using CWSB.WebApp.MVC.Extensions
-@inject IUser AppUser
+﻿@using CWSB.Core.User
+@inject IAspNetUser AppUser
 
 <ul class="navbar-nav">
     @if (AppUser.IsAuthenticated())    
