Added function to use the ServicesUrl to get Hub url at Chat Page.

--- a/src/Web/MVC/CWSB.WebApp.MVC/Views/Chat/ViewMessage.cshtml
+++ b/src/Web/MVC/CWSB.WebApp.MVC/Views/Chat/ViewMessage.cshtml
@@ -39,6 +39,9 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script>
+        window._signalRAddress = @Json.Serialize(ViewData["SignalRAddress"]);
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aspnet-signalr/1.1.4/signalr.min.js" integrity="sha512-hqwtOj6waHZZoLRoJoLn0tq34JS97tR1QmhM69uvyrt3LVBiR1o0xeOVAskjUFL1L1fahQH2W7IdcMaFbqCEaw==" crossorigin="anonymous"></script>
     <script src="~/js/chat.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js" integrity="sha512-DedNBWPF0hLGUPNbCYfj8qjlEnNE92Fqn7xd3Sscfu7ipy7Zu33unHdugqRD3c4Vj7/yLv+slqZhMls/4Oc7Zg==" crossorigin="anonymous"></script>   
